# 6th-Sem-AI-Lab

./: README.md  lab1.ipynb
04-02/: README.md  legalAgent.py  pyproject.toml  researchAgent.py  thaiRecipeAgent.py  youtubeAgent.py
04-02/tmp/: Research the latest developments in brain-computer interfaces.md  research_report.md
07-01/: README.md  finance-agent.py  image-agent.py  nb.ipynb  pyproject.toml  web-search-agent.py  web-search.py
14-01/: README.md  astar.ipynb  coding-agent.py  pyproject.toml  ucs.ipynb
21-01/: genetic.ipynb  genetic.py  hill_climb.ipynb  hillclimb.py
28-01-Test/: 2205248_AI-LabTest.ipynb  Q1-BiDirectional-BFS.ipynb  Q2-GeneticAlgo-Tug.ipynb  bibifs.py
Lab 1/: lab1.ipynb
Lab 2/: lab2.ipynb
Lab 3/: lab3.ipynb  script.py
Practice/: bfs.ipynb  dfs.ipynb
