[project]
name = "07-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=7.2.0",
    "google-generativeai>=0.8.3",
    "groq>=0.13.1",
    "ipykernel>=6.29.5",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "phidata>=2.7.6",
    "yfinance>=0.2.51",
]
